--- a/shared/src/commonMain/resources/package.json
+++ b/shared/src/commonMain/resources/package.json
@@ -1,5 +1,5 @@
 {
   "name": "shared-types",
-  "description": "Locally shared types",
+  "description": "Local node module with shared types",
   "version": "4.2.0"
 }
